implement filterByCountryWithResponseTimeAboveLimit